@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.4 =
 -------------------------------------------------
+* Fixed a problem with sections pagination when course is in normal mode.
 
 = 2.0.3 =
 -------------------------------------------------
